# ECE763-ComputerVision

./: .gitignore  README
HW/HW01/: CMakeLists.txt  build.sh  expectation_maximization.cpp  expectation_maximization.py  utils.cpp  utils.h
HW/HW02/: check_mat_sizes_after_convolution.py
HW/HW0pt1/tutorial-activation-func/: Activation_Functions.ipynb
HW/HW0pt1/tutorial-data-transforms-aug/: plot_transforms_illustrations.ipynb
HW/HW0pt1/tutorial-intro-pytorch/: Introduction_to_PyTorch.ipynb
HW/HW0pt1/tutorial-nn/: cifar10_tutorial.ipynb  neural_networks_tutorial.ipynb
Projects/Project01/Project01/: Project_01_MLPs_ConvNets_ckelton_empty.ipynb
Projects/Project02/project02/: Project_02_ViTs_ckelton_empty.ipynb
Projects/Project02/project02/.ipynb_checkpoints/: Project_02_ViTs_ckelton_results-checkpoint.ipynb
Projects/Project03/project_03/: Project_03_SSL_ckelton_empty.ipynb  Project_03_SSL_ckelton_results.ipynb
